--- a/config/bridge_config.json
+++ b/config/bridge_config.json
@@ -5,6 +5,7 @@
   "input_path": "files/data_source",
   "output_path": "files/data_out",
   "input_file": "SampleCSVFile_2kb.csv",
+  "consumer_group": "cs_group_a",
   "host": [
     "127.0.0.1:61424",
     "127.0.0.1:61430",
