update benchmark result with open messaging bench tool

--- a/config/bridge_config.json
+++ b/config/bridge_config.json
@@ -1,9 +1,9 @@
 {
   "partition_count": 10,
-  "consumer_count": 10,
+  "consumer_count": 1,
   "topic_name": "product_inventory_tes1",
-  "input_path": "files/data_source",
-  "output_path": "files/data_out",
+  "input_path": "files/data_source/",
+  "output_path": "files/data_out/",
   "input_file": "SampleCSVFile_2kb.csv",
   "consumer_group": "cs_group_a",
   "host": [
